src/objects/GLAccount__c.object
<CustomObject>
    <description>Definitions for General Ledger Accounts including GL codes, names, import options, etc. (Revenues &amp; Expenses - Ticket Revenues, Ancillary Revenues, Event Expenses, COGS Expenses, etc.)</description>
    <fields>
        <fullName>ActiveFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyToBuySellEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply To Buy Sell Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyToCaterease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply To Caterease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyToGospelBrunchEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply To Gospel Brunch Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyToHOBEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply To HOB Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyToNAMusicEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply To NA Music Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyToPromotedEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply To Promoted Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyToRentalEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply To Rental Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyToSAPBPC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply To SAPBPC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvailableForForecast__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available For Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CategorySort__c</fullName>
        <label>Category Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising Expense</fullName>
                </value>
                <value>
                    <fullName>Barter Advertising Expense</fullName>
                </value>
                <value>
                    <fullName>Barter Other Variable Expense</fullName>
                </value>
                <value>
                    <fullName>Barter - Ticket Revenue</fullName>
                </value>
                <value>
                    <fullName>Booking Revenue</fullName>
                </value>
                <value>
                    <fullName>Box Suite Event Revenue</fullName>
                </value>
                <value>
                    <fullName>COGS - All Other</fullName>
                </value>
                <value>
                    <fullName>COGS - Concessions</fullName>
                </value>
                <value>
                    <fullName>COGS - Merchandise</fullName>
                </value>
                <value>
                    <fullName>Concession Revenue</fullName>
                </value>
                <value>
                    <fullName>Co Promote Expenses</fullName>
                </value>
                <value>
                    <fullName>Co Promote Sell Off Revenue</fullName>
                </value>
                <value>
                    <fullName>Event Rent Expense</fullName>
                </value>
                <value>
                    <fullName>Event Sponsorship Revenue</fullName>
                </value>
                <value>
                    <fullName>Facility Maintenance Fee</fullName>
                </value>
                <value>
                    <fullName>Insurance Expense</fullName>
                </value>
                <value>
                    <fullName>Merchandise Revenue</fullName>
                </value>
                <value>
                    <fullName>Operating Expense</fullName>
                </value>
                <value>
                    <fullName>Other Event Revenue</fullName>
                </value>
                <value>
                    <fullName>Other Variable Expense</fullName>
                </value>
                <value>
                    <fullName>Parking Revenue</fullName>
                </value>
                <value>
                    <fullName>Production Expense</fullName>
                </value>
                <value>
                    <fullName>PSS/Box Suites - Event</fullName>
                </value>
                <value>
                    <fullName>Rental/Special Event Expense</fullName>
                </value>
                <value>
                    <fullName>Rental/Special Event Revenue</fullName>
                </value>
                <value>
                    <fullName>Season Seats - Event</fullName>
                </value>
                <value>
                    <fullName>Service Charge Rebate Revenue</fullName>
                </value>
                <value>
                    <fullName>Sound &amp; Lights Expense</fullName>
                </value>
                <value>
                    <fullName>Talent Fees</fullName>
                </value>
                <value>
                    <fullName>Ticket Revenue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeactivationDate__c</fullName>
        <label>Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DefaultCalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinancialCategorySAPBPC__c</fullName>
        <label>Financial Category - SAPBPC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
                <value>
                    <fullName>Barter</fullName>
                </value>
                <value>
                    <fullName>Co-Promoter</fullName>
                </value>
                <value>
                    <fullName>Operating Expense</fullName>
                </value>
                <value>
                    <fullName>Promoter Profits</fullName>
                </value>
                <value>
                    <fullName>PSS/LSM</fullName>
                </value>
                <value>
                    <fullName>Rome Metrics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GLCode__c</fullName>
        <externalId>true</externalId>
        <label>GL Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ImportRateType__c</fullName>
        <label>Import Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Cap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedContra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contra</label>
        <referenceTo>GLAccount__c</referenceTo>
        <relationshipLabel>Related Contra (GL Account)</relationshipLabel>
        <relationshipName>GLAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RentalMap__c</fullName>
        <description>The code of the GL Account that this converts to when converting to Rental GL types.</description>
        <label>Rental Map</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevenueFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Needed for Oracle Integration</description>
        <label>Revenue Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SettlementCalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Settlement Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TourFinanceAccessible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tour Finance Accessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ticket Revenue</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
                <value>
                    <fullName>Contra</fullName>
                </value>
                <value>
                    <fullName>COGS</fullName>
                </value>
                <value>
                    <fullName>Talent Fees</fullName>
                </value>
                <value>
                    <fullName>Co Promote Expense</fullName>
                </value>
                <value>
                    <fullName>Co Promote Revenue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GL Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>GLCode__c</columns>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Type__c</columns>
        <columns>RelatedContra__c</columns>
        <columns>CategorySort__c</columns>
        <columns>AvailableForForecast__c</columns>
        <columns>ApplyToPromotedEvent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GL Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>